lines animation of steps parts on mobile fixed

--- a/app/globals.css
+++ b/app/globals.css
@@ -128,6 +128,7 @@ section {
   pointer-events: none;
   top: 15%;
   bottom: 20%;
+  transform: translateY(5%);
   left: 50%;
 }
 
